<resources>
    <string name="app_name">Data Diary</string>
    <string name="app_name_menu">Dashboard</string>
    <string name="app_name_main">Menu</string>
    <string name="editTitle">Enter Title</string>
    <string name="editDate">Date</string>
    <string name="editMood">Mood</string>
    <string name="editContent">Add here the content</string>
    <string name="addButton">Save</string>
    <string name="loadButton">Read Notes</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>
    <string name="enterButton">Access</string>
    <string name="text_view_description">Here you can add some thoughts</string>
    <string name="textViewResult">Content</string>
    <string name="textViewMoods">Mood List will appear here</string>


    <!-- CONTENT DESCRIPTION  -->
    <string name="menu_icon_list">Access List</string>
    <string name="menu_icon_camera">Access Camera</string>
    <string name="menu_icon_search">Search</string>
    <string name="menu_icon_calendar">Access Calendar</string>
    <string name="menu_icon_settings">Access Settings</string>
    <string name="menu_icon_info">Access About Section</string>

    <!-- DIALOG  -->
    <string name="dialog_about_title">About the app</string>
    <string name="dialog_about_text">This app was created to record your thoughts, feelings, and important moments of the day.</string>
    <string name="dialog_close_button">Close</string>



</resources>
