<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_gradient"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp"

            />

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/text_view_description"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/editTitle"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            android:background="@drawable/edit_text_background"

            />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="12dp"
            android:digits="0123456789/"
            android:hint="@string/editDate"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            android:background="@drawable/edit_text_background"

            />

        <EditText
            android:id="@+id/editMood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/editMood"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            android:background="@drawable/edit_text_background"

            />

        <EditText
            android:id="@+id/editContent"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:background="@drawable/add_content_background"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/editContent"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/addButton"
                app:backgroundTint="@color/add_button_color"
                app:cornerRadius="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loadButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/loadButton"
                app:backgroundTint="@color/add_button_color"
                app:cornerRadius="16dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/editButton"
                app:backgroundTint="@color/edit_button_color"
                app:cornerRadius="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/deleteButton"
                app:backgroundTint="@color/delete_button_color"
                app:cornerRadius="16dp" />


        </LinearLayout>


        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="18dp"
            android:text="@string/textViewResult"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewMoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="14dp"
            android:text="@string/textViewMoods"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>